# agenttrust-os

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  agenttrust.example.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: adapter-request.md  bug-report.md  scenario-request.md
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  good-first-issues.md  launch-kit.md
examples/email-agent/: agenttrust.yaml
reports/: email-agent-trust-report.md  sample-report.md
scenarios/: approval-bypass.yaml  data-leak.yaml  prompt-injection.yaml
site/: index.html  styles.css
src/agenttrust/: __init__.py  cli.py  manifest.py  report.py
tests/: test_scan.py
